[gd_scene load_steps=5 format=2]

[ext_resource path="res://Grafik/Character/Eco_guide_ddu.png" type="Texture" id=1]
[ext_resource path="res://scripts/EcoGuide.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 35.0
height = 50.0

[sub_resource type="CircleShape2D" id=2]
radius = 220.077

[node name="EcoGuide" type="Node2D"]
script = ExtResource( 2 )

[node name="EcoGuideChar" type="KinematicBody2D" parent="."]
position = Vector2( 636, 110 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="Sprite" parent="EcoGuideChar"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EcoGuideChar"]
shape = SubResource( 1 )

[node name="Detection1" type="Area2D" parent="EcoGuideChar"]

[node name="Detection" type="CollisionShape2D" parent="EcoGuideChar/Detection1"]
shape = SubResource( 2 )

[node name="Pos1" type="Position2D" parent="."]
position = Vector2( 2100, 118 )

[node name="Pos2" type="Position2D" parent="."]
position = Vector2( 2500, -500 )

[node name="Pos3" type="Position2D" parent="."]
position = Vector2( 3050, -510 )

[node name="Pos4" type="Position2D" parent="."]
position = Vector2( 3500, 125 )

[node name="Pos5" type="Position2D" parent="."]
position = Vector2( 2316, 921 )

[connection signal="body_entered" from="EcoGuideChar/Detection1" to="." method="_on_Detection_body_entered"]
